fix text-align

--- a/themes/snapshot/assets/css/main.css
+++ b/themes/snapshot/assets/css/main.css
@@ -1453,11 +1453,11 @@
 	display: -ms-flexbox;
 	-ms-flex-pack: center;
 	-ms-flex-align: center;
-	/* padding: 8em 0 6em 0; */
+	padding: 0em 0 6em 0;
 	-moz-align-items: center;
 	-webkit-align-items: center;
 	-ms-align-items: center;
-	/* align-items: center; */
+	align-items: center;
 	display: -moz-flex;
 	/* display: -webkit-flex; */
 	display: -ms-flex;
@@ -1471,13 +1471,15 @@
 	/* position: relative; */
 	background: #000;
 	background-image: url(../../images/banner_old.jpg);
-	/* background-size: cover; */
-	/* background-attachment: fixed; */
-	/* background-repeat: no-repeat; */
-	/* background-position: center; */
+	background-size: cover;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-position: center;
 	/* text-align: center; */
 	color: #FFF;
 }
+
+
 
 		#banner:before {
 			-moz-transition: opacity 3s ease;
@@ -1521,6 +1523,7 @@
 			margin: 0 0 0.5em 0;
 			padding: 0;
 			color: #FFF;
+			text-align:center;
 		}
 
 		#banner p {
